@@ -1,8 +1,8 @@
-What's new in ver. 1.0.0:
+What's new in ver. 1.0.1-pre1:
 
-Updated release of VijayAnand.MauiToolkit.Core NuGet package and is built on top of .NET 6.
+Route parameters in the Navigation service methods can also be passed as Tuple (string key, object value).
 
-Methods in the DialogService have been suffixed with Async.
+Now GoBackAsync method also takes parameters.
 
 The objective is to ease the development of the Razor Class Library (RCL) so that it can be shared with all Blazor targets (.NET MAUI, Blazor Server and WebAssembly, Windows Forms, and WPF).
 
@@ -16,3 +16,5 @@ To start with defines the following abstractions:
 4. Theme - IThemeService
 
 A Model class for UserToken and frequently used Constants for OAuth / OIDC authentication.
+
+Join me on Developer Thoughts, https://egvijayanand.in/, an exclusive blog for .NET MAUI and Blazor.
